added dependencies: lombok and javafx

--- a/cloud-client/pom.xml
+++ b/cloud-client/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-client</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>georgy.gusarov</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
