Maven: cannot install after clean. Exception: georgy.gusarov:common:jar:1.0-SNAPSHOT is missing, no dependency information available

--- a/cloud-server/pom.xml
+++ b/cloud-server/pom.xml
@@ -9,7 +9,26 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <build>
+        <finalName>EasyServer</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>EasyServer</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <artifactId>cloud-server</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>georgy.gusarov</groupId>
